<resources>
    <string name="app_name">PouPay</string>
    <string name="txt_date">14 de agosto</string>
    <string name="txt_totValue">R$ 450,00</string>
    <string name="txt_description_value">Produto</string>
    <string name="txt_payment_type">Dinheiro</string>
    <string name="txt_value">Valor</string>
    <string name="txt_description">Descrição</string>
    <string name="hint_description">Roupa, mercado, lanche…</string>
    <string name="btn_confirm">Confirmar</string>
    <string name="hint_usuario">Nome do usuário</string>
    <string name="hint_senha">Digite sua senha</string>
    <string name="hint_confirmarSenha">Confirme a senha</string>
    <string name="btn_concluir">Concluir</string>
    <string name="btn_entrar">Entrar</string>
    <string name="txt_cadastrarse">Cadastrar-se</string>
    <string name="txt_versao">v01 - Teste</string>
    <string name="txt_info">Desenvolvido pela Equipe PouPay\nToque aqui para saber mais.</string>
    <string name="txt_namePouPay">PouPay</string>
    <string name="txt_slogan">Gerencie suas Despesas e Receitas</string>
    <string name="txt_cadastro">Cadastro</string>
    <string name="txt_infoCadastro">Informe seus dados para o cadastro</string>
    <string name="subtitle">Gerencie suas Despesas e Receitas</string>
    <string name="login">Login</string>
    <string name="signing">Entrando…</string>
    <string name="signup_finished">Cadastro Concluído</string>
    <string name="signup_sucess_text">Seu cadastro no PouPay foi realizado com sucesso. Clique no botão abaixo para voltar a tela de login para entrar com suas credenciais.</string>
    <string name="connection_error">Houve um problema com a comunicação com o servidor, cheque sua internet e tente novamente.</string>
    <string name="txt_tittle_plane">Planejamentos</string>
    <string name="txt_sub_plane">Qual é seu objetivo financeiro hoje?</string>
    <string name="txt_plane1">Reserva de emergência</string>
    <string name="txt_plane2">Viagens</string>
    <string name="txt_plane3">Investimentos</string>
    <string name="txt_plane4">Aquisição de um bem</string>
    <string name="logout">Sair do PouPay</string>
    <string name="add">Adicionar Informação</string>
    <string name="main_title">Despesas e Receitas</string>
    <string name="save_login">Salvar Credenciais</string>
    <string name="app_subtitle">Gerencie suas Despesas e Receitas</string>
    <string name="info">Desenvolvido pela Equipe PouPey\nToque aqui para saber mais.</string>
    <string name="subtitle_days">Últimos 7 Dias</string>
    <string name="subtitle_month">Último Ano</string>
    <string name="subtitle_year">Lançamentos Anuais</string>
    <string name="sqlerror">Não foi possível se comunicar com o servidor. Verifique sua conexão e tente novamente.</string>
    <string name="value_placeholder">R$ -</string>
    <string name="reminds">Lembretes</string>
    <string name="logs">Relatórios</string>
    <string name="plains">Planos</string>
    <string name="calc">Calculadora</string>
    <string name="logout_text">Selecione entre sair do aplicativo ou sair da sua conta.</string>
    <string name="cancel">Cancelar</string>
    <string name="close_app">Fechar o Aplicativo</string>
    <string name="logout_account">Sair da Conta</string>
    <string name="btn_download">Baixar</string>
    <string name="reports">Relatórios</string>
    <string name="select_date">Selecionar a data</string>
    <string name="export_xls_error">Erro ao baixar os seus dados. Tente novamente mais tarde.</string>
    <string name="export_xls_sucess">Planilha salva com sucesso.</string>
    <string name="planning">Planejamentos</string>
    <string name="Plans_addedValue">R$ 150,00</string>
    <string name="Plans_totalValue">/R$ 2000,00</string>
    <string name="btn_cancel">Cancelar</string>
    <string name="NewPlan_estimatedDate">--/--/----</string>
    <string name="hint_NewPlan_goal">Investimento</string>
    <string name="Plan_inputGoal">Outro…</string>
    <string name="my_plans">Meus Planos</string>
    <string name="new_plan">Novo plano</string>
    <string name="plan_invest">Investimento</string>
    <string name="plan_travel">Viagem</string>
    <string name="plan_emergency">Reserva</string>
    <string name="plan_debt">Dívida</string>
    <string name="new_plan_title">Qual seu objetivo financeiro?</string>
    <string name="back">Voltar</string>
    <string name="goal">Objetivo</string>
    <string name="financial_institution">Instituição Financeira</string>
    <string name="financial_instituition_hint">Banco, reserva pessoal…</string>
    <string name="estimated_date">Data estimada</string>
    <string name="description">Descrição</string>
</resources>