<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_gradient"
    tools:context=".SplashActivity"
    tools:ignore="ContentDescription">

    <ProgressBar
        android:id="@+id/pgr_progressbar"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:indeterminateTint="#FFFFFF"
        android:visibility="gone" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/ll_info"
        android:layout_alignParentTop="true"
        android:layout_centerVertical="true"
        android:gravity="center_vertical|center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/img_logo"
            android:layout_width="145dp"
            android:layout_height="145dp"
            android:src="@drawable/ic_baseline_savings_24" />

        <TextView
            android:id="@+id/txt_namePouPay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nova_square_regular"
            android:text="@string/txt_namePouPay"
            android:textColor="@color/white"
            android:textSize="48sp" />

        <TextView
            android:id="@+id/txt_slogan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_slogan"
            android:textColor="@color/white"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/txt_cadastrarse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:text="@string/txt_cadastro"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_infoCadastro"
            android:textColor="@color/white"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/edt_usuario"
            style="@style/TextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="50dp"
            android:background="@drawable/coustom_editext"
            android:drawableStart="@drawable/ic_baseline_person_24"
            android:elevation="6dp"
            android:hint="@string/hint_usuario"
            android:inputType="text"
            android:paddingStart="8sp"
            android:paddingEnd="8sp"
            android:textColor="@color/background"
            android:textColorHint="#D5D5D5"
            android:textSize="14sp"
            android:textStyle="bold"
            android:importantForAutofill="no" />

        <EditText
            android:id="@+id/edt_senha"
            style="@style/TextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="18dp"
            android:layout_marginEnd="50dp"
            android:background="@drawable/coustom_editext"
            android:drawableStart="@drawable/ic_baseline_lock_24"
            android:elevation="6dp"
            android:hint="@string/hint_senha"
            android:inputType="textPassword"
            android:paddingStart="8sp"
            android:paddingEnd="8sp"
            android:textColor="@color/background"
            android:textColorHint="#D5D5D5"
            android:textSize="14sp"
            android:textStyle="bold"
            android:importantForAutofill="no" />

        <EditText
            android:id="@+id/edt_confirmarSenha"
            style="@style/TextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="18dp"
            android:layout_marginEnd="50dp"
            android:background="@drawable/coustom_editext"
            android:drawableStart="@drawable/ic_baseline_lock_24"
            android:elevation="6dp"
            android:hint="@string/hint_confirmarSenha"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:paddingStart="8sp"
            android:paddingEnd="8sp"
            android:textColor="@color/background"
            android:textColorHint="#D5D5D5"
            android:textSize="14sp"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="200dp"
            android:layout_height="2dp"
            android:layout_margin="32dp"
            android:src="@drawable/solid_white" />

        <Button
            android:id="@+id/btn_concluir"
            style="@style/ButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:text="@string/btn_concluir"
            android:textColor="@color/background"
            android:textSize="20sp"
            app:backgroundTint="@null" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="#33000000"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txt_versao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:text="@string/txt_versao"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/txt_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="6dp"
            android:text="@string/txt_info"
            android:textAlignment="center"
            android:textColor="@color/white" />

    </LinearLayout>

</RelativeLayout>
