<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/signup_sucess_main"
    android:background="@color/background"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#3F000000"
        android:padding="6dp"
        android:text="@string/signup_finished"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:drawableTopCompat="@drawable/ic_done" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="12dp"
        android:paddingStart="10dp"
        android:paddingEnd="34dp"
        android:text="@string/signup_sucess_text"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="12sp" />

    <Button
        android:id="@+id/signup_sucess_finish_button"
        style="@style/ButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:text="@string/btn_concluir"
        android:textColor="@color/background"
        android:textSize="20sp"
        app:backgroundTint="@null" />

</LinearLayout>