<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_gradient"
    tools:context=".view.SplashScreen"
    tools:ignore="ContentDescription">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/ll_logo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/ll_info"
            android:layout_alignParentTop="true"
            android:layout_centerVertical="true"
            android:gravity="center_vertical|center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/img_logo"
                android:layout_width="145dp"
                android:layout_height="145dp"
                android:src="@drawable/ic_baseline_savings_24" />

            <TextView
                android:id="@+id/txt_namePouPay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nova_square_regular"
                android:text="@string/app_name"
                android:textColor="@color/white"
                android:textSize="48sp" />

            <TextView
                android:id="@+id/txt_slogan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/subtitle"
                android:textColor="@color/white"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/txt_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:text="@string/login"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/edt_usuario"
                style="@style/TextViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:textStyle="bold"
                android:layout_marginTop="40dp"
                android:layout_marginRight="50dp"
                android:background="@drawable/coustom_editext"
                android:drawableStart="@drawable/ic_baseline_person_24"
                android:elevation="6dp"
                android:hint="@string/hint_usuario"
                android:importantForAutofill="no"
                android:inputType="text"
                android:maxLength="20"
                android:paddingStart="8sp"
                android:paddingEnd="8sp"
                android:textColor="@color/background"
                android:textColorHint="#D5D5D5"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/edt_senha"
                style="@style/TextViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="18dp"
                android:layout_marginRight="50dp"
                android:background="@drawable/coustom_editext"
                android:drawableStart="@drawable/ic_baseline_lock_24"
                android:elevation="6dp"
                android:hint="@string/hint_senha"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:textStyle="bold"
                android:maxLength="20"
                android:paddingStart="8sp"
                android:paddingEnd="8sp"
                android:textColor="@color/background"
                android:textColorHint="#D5D5D5"
                android:textSize="14sp" />

            <ImageView
                android:layout_width="200dp"
                android:layout_height="2dp"
                android:layout_margin="32dp"
                android:src="@drawable/solid_white"/>

            <Button
                android:id="@+id/btn_entrar"
                style="@style/ButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:text="@string/btn_entrar"
                android:textColor="@color/background"
                android:textSize="20sp"
                app:backgroundTint="@null" />

            <TextView
                android:id="@+id/txt_cadastrarse"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/txt_cadastrarse"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="#33000000"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txt_versao"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:text="@string/txt_versao"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/txt_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="6dp"
                android:text="@string/txt_info"
                android:textAlignment="center"
                android:textColor="@color/white" />

        </LinearLayout>

    </RelativeLayout>

    <FrameLayout
        android:id="@+id/login_ripple"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_gravity="center">


        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/bg_ripplecircle"
            app:tint="@color/background" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="12dp"
            android:src="@drawable/bg_ripplecircle"
            app:tint="@color/background2" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical">

            <ProgressBar
                style="@android:style/Widget.Holo.Light.ProgressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:indeterminate="true"
                android:indeterminateTint="@color/white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/signing"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

        </LinearLayout>


    </FrameLayout>

</FrameLayout>
