<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PlansActivity">

    <androidx.appcompat.widget.Toolbar
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:background="@drawable/bg_gradient" />

    <TextView
        android:id="@+id/txt_plane"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="150dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/txt_tittle_plane"
        android:textColor="@color/white"
        android:textSize="28sp" />
    <TextView
        android:id="@+id/txt_plane2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_plane"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/txt_sub_plane"
        android:textColor="@color/white"
        android:textSize="18sp" />


    <ImageView
        android:layout_width="90dp"
        android:layout_height="90dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/txt_plane"
        android:layout_marginBottom="30dp"
        android:src="@drawable/ic_alert"
        android:importantForAccessibility="no" />

    <ImageView
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_plane"
        android:layout_width="200dp"
        android:layout_height="2dp"
        android:layout_margin="10dp"
        android:src="@drawable/solid_white"
        android:importantForAccessibility="no" />

    <Button
        android:id="@+id/btn_plan1"
        style="@style/ButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toBottomOf="@id/txt_plane2"
        android:textColor="@color/background"
        android:text="@string/txt_plane1"
        android:textSize="18sp"
        android:textAllCaps="false"
        app:backgroundTint="@null"/>

    <Button
        android:id="@+id/btn_plan2"
        style="@style/ButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/btn_plan1"
        android:textColor="@color/background"
        android:text="@string/txt_plane2"
        android:textSize="18sp"
        android:textAllCaps="false"
        app:backgroundTint="@null"/>
    <Button
        android:id="@+id/btn_plan3"
        style="@style/ButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/btn_plan2"
        android:textColor="@color/background"
        android:text="@string/txt_plane3"
        android:textSize="18sp"
        android:textAllCaps="false"
        app:backgroundTint="@null"/>
    <Button
        style="@style/ButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/btn_plan3"
        android:textColor="@color/background"
        android:text="@string/txt_plane4"
        android:textSize="18sp"
        android:textAllCaps="false"
        app:backgroundTint="@null"/>


















</androidx.constraintlayout.widget.ConstraintLayout>